fix layout issues

--- a/frontend/app/src/components/ProfilePage/ProfilePage.module.css
+++ b/frontend/app/src/components/ProfilePage/ProfilePage.module.css
@@ -1,6 +1,6 @@
 .container {
   display: flex;
   padding-top: 64px;
-  height: 150vh;
+  min-height: 100vh;
   background-color: #181818;
 }
