--- a/frontend/app/src/components/RegisterModal/RegisterModal.module.css
+++ b/frontend/app/src/components/RegisterModal/RegisterModal.module.css
@@ -2,7 +2,7 @@
   z-index: 100;
   position: fixed;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   background-color: rgba(0, 0, 0, 0.8);
   display: flex;
   justify-content: center;
